--- a/Style Sheets/styles.css
+++ b/Style Sheets/styles.css
@@ -13,7 +13,6 @@ body{
 .center {
     display: flex;
     justify-content: center;
-    padding-top: 10%;
   }
 
 h2 {
@@ -215,4 +214,8 @@ a {
     word-wrap: break-word;
     padding-bottom: 50px;
     text-align: justify;
+}
+
+.socialmediabar {
+    justify-content: center;
 }
